--- a/nginx.conf
+++ b/nginx.conf
@@ -1,11 +1,11 @@
 server { # http
-  listen   80;
-  server_name  tv;
+	listen   8889;
+	server_name  _;
 
-  access_log  /var/log/nginx/tv.access.log;
-  error_log  /var/log/nginx/tv.error.log;
+	access_log  /var/log/nginx/tv.access.log;
+	error_log  /var/log/nginx/tv.error.log;
 
-  root /home/tshm/tv/public;
+	root /home/tshm/tv/public;
 
 	location ~ \.flv$ {
 		flv;
@@ -18,21 +18,21 @@ server { # http
 		break;
 	}
 
-  location / {
-    if (-f $request_filename) {
-      rewrite_log off;
-			access_log off;
-      expires 1d;
-      break;
-    }
+	location / {
+		if (-f $request_filename) {
+		rewrite_log off;
+		access_log off;
+		expires 1d;
+		break;
+		}
 
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
+		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header Host $host;
 
-    if (!-f $request_filename) {
-      proxy_pass http://localhost:8889;
-      break;
-    }
-  }
+		if (!-f $request_filename) {
+			proxy_pass http://localhost:7000;
+			break;
+		}
+	}
 }
 # vim: ft=ruby:
