bugfix: avoid redirect_referer, doesnt work with port

--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server { # http
 		flv;
 	}
 
-	location "\.(ico|png|gif|jpe?g)$" {
+	location "\.(js|ico|png|gif|jpe?g)$" {
 		rewrite_log off;
 		access_log off;
 		expires max;
