--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,7 @@
 server { # http
 	listen   8889;
 	server_name  _;
+	port_in_redirect off;
 
 	access_log  /var/log/nginx/tv.access.log;
 	error_log  /var/log/nginx/tv.error.log;
