--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,9 @@
 server { # http
-	listen   80;
-	server_name  _;
+	listen   443;
+	ssl	on;
+	ssl_certificate	/etc/nginx/server.crt;
+	ssl_certificate_key	/etc/nginx/server.key;
+	#server_name  _;
 	#port_in_redirect off;
 
 	access_log  /var/log/nginx/tv.access.log;
