--- a/nginx.conf
+++ b/nginx.conf
@@ -30,7 +30,8 @@ server { # http
 		break;
 		}
 
-		proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		#proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+		proxy_set_header X-Forwarded-Proto $scheme;
 		proxy_set_header Host $host;
 
 		if (!-f $request_filename) {
