--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,10 @@ server { # http
 		flv;
 	}
 
+	location ~ \.mp4$ {
+		mp4;
+	}
+
 	location "\.(js|ico|png|gif|jpe?g)$" {
 		rewrite_log off;
 		access_log off;
